syntax = "proto3";

package api.v1;

import "api/v1/cloudevent.proto";

option go_package = "github.com/kanengo/egoist/pkg/api/v1;api";
option csharp_namespace = "Egoist.Client.Autogen.Grpc.v1";

message PublishEventRequest {
  bytes data = 1;
  string pubsub_name = 2;
  string topic = 3;
  map<string, string> metadata = 4;
  string content_type = 5;
}

message PublishEventResponse {

}

message BulkPublishRequest {
  repeated BulkPublishMessageEntry entries = 1;
  string pubsub_name = 2;
  string topic = 3;
  map<string,string> metadata = 4;
}

message BulkPublishResponse {
  repeated BulkPublishResponseFailedEntry failed_entries = 1;
}

message BulkPublishMessageEntry {
  string entry_id = 1;
  bytes event  = 2;
  string content_type = 3;
  map<string,string> metadata = 4;
}

message BulkPublishResponseFailedEntry {
  string entry_id = 1;
  string error = 2;
}

message SubscribeConfig {
  string pubsub_name = 1;
  string topic = 2;
  bool enable_bulk = 3;
  int32 max_bulk_event_count = 4;
  int32 max_bulk_event_await_ms = 5; //ms
  map<string, string> metadata = 6;
}

message SubscribeRequest {
  repeated SubscribeConfig configs = 1;
}

message SubscribeEntry {
  string topic = 1;
  CloudEvent events = 2;
}

message SubscribeResponse {
  repeated SubscribeEntry entries = 1;
}
